--- a/zmoney/Views/Base.lproj/Main.storyboard
+++ b/zmoney/Views/Base.lproj/Main.storyboard
@@ -168,7 +168,7 @@
                                                     <rect key="frame" x="10" y="10" width="55" height="55.5"/>
                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="55" id="M5S-RI-rjO"/>
+                                                        <constraint firstAttribute="height" constant="55" id="M5S-RI-rjO"/>
                                                         <constraint firstAttribute="width" constant="55" id="rgQ-XE-GBq"/>
                                                     </constraints>
                                                 </imageView>
